--- a/github.html
+++ b/github.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>youtube</title>
+    <title>GitHub</title>
     <link rel="stylesheet" href="estilos/social.css">
 </head>
 <body>
-    <img src="imagens/tela-youtube.png" alt="youtube">
-    <a href="https://www.youtube.com/user/cursosemvideo/playlists" target="_blank">ACESSE</a>
 
+    <img src="imagens/tela-github.jpg" alt="GitHub">
+    <a href="https://www.github.com/gustavoguanabara/" target="_blank">ACESSE</a>
+
+    
 </body>
 </html>
