--- a/instagram.html
+++ b/instagram.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html lang="pt-ao">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>youtube</title>
+    <title>Instagram</title>
     <link rel="stylesheet" href="estilos/social.css">
 </head>
 <body>
-    <img src="imagens/tela-youtube.png" alt="youtube">
-    <a href="https://www.youtube.com/user/cursosemvideo/playlists" target="_blank">ACESSE</a>
-
+    <img src="imagens/tela-instagram.jpg" alt="Instagram">
+    <a href="https://www.instagram.com/gustavoguanabara/" target="_blank">ACESSE</a>
+    
 </body>
 </html>
