--- a/twitter.html
+++ b/twitter.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>youtube</title>
+    <title>Twitter</title>
     <link rel="stylesheet" href="estilos/social.css">
 </head>
 <body>
-    <img src="imagens/tela-youtube.png" alt="youtube">
-    <a href="https://www.youtube.com/user/cursosemvideo/playlists" target="_blank">ACESSE</a>
-
+    <img src="imagens/tela-twitter.jpg" alt="Twitter">
+    <a href="https://twitter.com/guanabara" target="_blank">ACESSE</a>
+    
 </body>
 </html>
